project(TOOL)

# add_subdirectory("corki")
# add_subdirectory("fizz")
# add_subdirectory("gnar")
# add_subdirectory("heimerdinger")
# add_subdirectory("kennen")
# add_subdirectory("kled")
# add_subdirectory("lulu") # wad explorer
add_subdirectory("norra") # model viewer
add_subdirectory("poppy") # manifest decoder and downloader
# add_subdirectory("rumble")
# add_subdirectory("teemo")
# add_subdirectory("tristana")
# add_subdirectory("veigar")
# add_subdirectory("ziggz")
