project(TOOL)

# add_subdirectory("corki")
# add_subdirectory("fizz")
add_subdirectory("gnar") # sound
add_subdirectory("heimerdinger") # data converter
# add_subdirectory("kennen")
# add_subdirectory("kled")
add_subdirectory("lulu") # wad exporter
#add_subdirectory("norra")
add_subdirectory("poppy") # manifest decoder and downloader
# add_subdirectory("rumble")
add_subdirectory("teemo") # hash finder
# add_subdirectory("tristana")
# add_subdirectory("veigar")
add_subdirectory("vex") # model viewer
# add_subdirectory("ziggs")
