project(TOOL_poppy)

find_package(OpenSSL REQUIRED)
find_package(CURL REQUIRED)
find_package(fmt CONFIG REQUIRED)
find_package(TBB CONFIG REQUIRED)

add_executable(poppy poppy.cpp deploy.cpp download.cpp fetch.cpp)
target_compile_definitions(poppy PRIVATE DRAGON_LIBRARY_NAME="poppy")
if (YORDLE_TOOL_POPPY_THREADING)
    message("-- Enabling threading in Poppy")
    target_compile_definitions(poppy PRIVATE POPPY_THREADING)
endif ()
target_link_libraries(poppy yordle)
target_link_libraries(poppy standard_dragon)
target_link_libraries(poppy ProgramOptionsHxx)
target_link_libraries(poppy CURL::libcurl)
target_link_libraries(poppy OpenSSL::Crypto)
target_link_libraries(poppy fmt::fmt)
target_link_libraries(poppy TBB::tbb)

include(GNUInstallDirs)
install(TARGETS poppy RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
